chore: remove commons-lang2 and most of commons-lang3, use vanillia Java